# dz2

./: .gitignore  CMakeLists.txt
dz2/: Controller.cpp  Controller.h  Model.cpp  Model.h  View.cpp  View.h  data.txt  dz2.cpp
